# rsh

./: Cargo.toml  README.md
src/: args.rs  config.rs  error.rs  main.rs  rsh.rs
src/builtins/: alias.rs  cd.rs  export.rs  mod.rs
src/exec/: mod.rs  program.rs  runnable.rs  substitute.rs
src/input/: mod.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
src/parsing/: ast.rs  lexer.rs  mod.rs  parser.rs
src/tests/: alias.sh  cd.sh  mod.rs
