[package]
name = "rsh"
version = "0.0.1"
authors = ["Champii <contact@champii.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "5.0.4"
rustyline-derive = "0.2.0"
quick-error = "1.2.2"
logos = "0.9.7"
lazy_static = "1.4.0"
